<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- CardView for Image View with rounded corners and shadow -->
        <androidx.cardview.widget.CardView
            android:id="@+id/result_image_card"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:radius="16dp">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/result_image"
                app:srcCompat="@drawable/ic_place_holder"/>

        </androidx.cardview.widget.CardView>

        <!-- Result Text -->
        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prediction"
            android:textSize="22sp"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:gravity="center" />

        <!-- CardView for Confidence Score in a box with shadow -->
        <androidx.cardview.widget.CardView
            android:id="@+id/confidence_score_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:radius="16dp">

            <TextView
                android:id="@+id/confidence_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confidence_app_95"
                android:textSize="18sp"
                android:textColor="?android:textColorSecondary"
                android:gravity="center"
                android:padding="8dp"
                android:textStyle="italic" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
