<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.AnalyzeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp">

            <!-- ImageView untuk menampilkan gambar yang dipilih -->
            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_place_holder"
                android:contentDescription="@string/selected_image"
                android:background="?attr/colorSurface"/>

            <!-- Progress Indicator untuk menunjukkan loading saat analisis -->
            <ProgressBar
                android:id="@+id/progressIndicator"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:layout_marginBottom="16dp"/>

            <!-- Button untuk membuka galeri -->
            <Button
                android:id="@+id/galleryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_from_gallery"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_place_holder"
                android:drawablePadding="8dp"
                android:layout_marginBottom="16dp"
                android:paddingVertical="10dp"/>

            <!-- Button untuk memulai analisis -->
            <Button
                android:id="@+id/analyzeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analyze_image"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorOnPrimary"
                android:drawableStart="@drawable/ic_place_holder"
                android:drawablePadding="8dp"
                android:paddingVertical="10dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

